-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 17.0.0
-
None
-
07d2e3c0b (17.0), b9b72413f (17.0)
As an AI completion user I would sometimes like to get the first line of a suggestion.
By pressing Tab I can get the whole suggestion, but in some cases only the first part is fine, the rest could be a repetition of code that exists.
Projects like ggml-org/llama.vim: Vim plugin for LLM-assisted code/text completion suggest having Shift-Tab for this operation.
For Gerrit Dashboard: QTCREATORBUG-33300 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
667525,4 | TextEditor: Use Shift-Tab for applyLine suggestion | 17.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |
667659,2 | TextEditor: Use QKeySequence::NativeText for tooltips | 17.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |