TextEditor: Use Shift-Tab for applyLine suggestion

Tab is used for appying the whole suggestion. And Shift-Tab just for the
line.

This would be on paar with other usages like `llama.vim` or
`llama.vscode`.

Fixes: QTCREATORBUG-33300
Change-Id: I222394f55288e86e0fced84dda78bb52b7138676
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>