src/plugins/texteditor/textsuggestion.cpp
@@ -154,7 +154,9 @@ public:
         auto apply = addAction(Tr::tr("Apply (%1)").arg(QKeySequence(Qt::Key_Tab).toString()));
         auto applyWord = addAction(
             Tr::tr("Apply Word (%1)").arg(QKeySequence(QKeySequence::MoveToNextWord).toString()));
-        auto applyLine = addAction(Tr::tr("Apply Line"));
+        auto applyLine = addAction(
+            Tr::tr("Apply Line (%1)")
+                .arg(QKeySequence(QKeyCombination(Qt::ShiftModifier, Qt::Key_Tab)).toString()));
 
         connect(apply, &QAction::triggered, this, &SuggestionToolTip::apply);
         connect(applyWord, &QAction::triggered, this, &SuggestionToolTip::applyWord);
